# risemu

./: .gitignore  Cargo.toml
risemu-cli/: Cargo.toml
risemu-cli/src/: args.rs  main.rs
src/: bus.rs  cpu.rs  dram.rs  emulator.rs  exception.rs  lib.rs  main.rs  ram.rs  rom.rs
tests/: add.rs  addi.rs  addiw.rs  addw.rs  macros.rs  rv32i.rs  utils.rs
